- * --> \ast - abstract nonsense verschoben - Fehler korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1321 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -392,13 +392,13 @@ Wir verabreden folgende Bezeichnungen:
   \begin{enumerate}
    \item Die triviale Gruppe $\{e\}$.
    \item $\Z$ mit der Addition $+$
-   \item $\Q, \R, \C$ mit der Addition oder $\Q^{*}, \R^{*}, \C^{*}$ mit der
+   \item $\Q, \R, \C$ mit der Addition oder $\Q^{\ast}, \R^{\ast}, \C^{\ast}$ mit der
     Multiplikation.
    \item Ein \highl{Körper} ist eine nichtleere Menge $K$ mit zwei Operationen, die man
     traditionell Addition und Multiplikation nennt:
     \begin{enumerate}
      \item $K$ ist mit der Addition eine kommutative Gruppe.
-     \item $K^{*}=K\setminus\{0\}$ ist mit der Multiplikation eine kommutative Gruppe.
+     \item $K^{\ast}=K\setminus\{0\}$ ist mit der Multiplikation eine kommutative Gruppe.
      \item Distributivität: $x(y+z)=xy+xz$ mit $x,y,z\in K$.
     \end{enumerate}
    \item Permutationsgruppen: Sei $X$ eine Menge und $S(X)$ sind alle
@@ -410,7 +410,7 @@ Wir verabreden folgende Bezeichnungen:
       invertierbaren $n\times n$"~Matrizen mit Koeffizienten in $\R$. Weiter
       ist $\GL(n, \C)$ dieselbe mit Koeffizienten in $\C$. Für den
       Galoiskörper $\F_{2}=\{0,1\}$ haben wir $\GL(n,\F_{2})$ mit $\abs{\GL(2,
-      \F_{2})}=6$ und $\abs{(\GL(,\F_{2})}=(2^{n}-1)(2^{n}-2)(2^{n}-4)\dotso
+      \F_{2})}=6$ und $\abs{(\GL(n,\F_{2})}=(2^{n}-1)(2^{n}-2)(2^{n}-4)\dotso
       (2^{n}-2^{n-1}))$.)
      \item Die spezielle lineare Gruppe $\SL(n,\R)$ ist die Gruppe aller
       invertierbaren $n\times n$"~Matrizen mit Koeffizienten aus $\R$ und
@@ -437,48 +437,6 @@ Wir verabreden folgende Bezeichnungen:
   \end{gather*}
 \end{defini}
 
-\paragraph{Abstract nonsense -- Einschub}
-\begin{bemerk}
-  Eine Kategorie besteht aus Objekten und Morphismen. Sind $X,Y$ zwei Objekte,
-  so ist die Menge ihrer Morphismen definiert: $\Hom(X,Y)$. Für $X,Y,Z$ hat
-  man die Hintereinanderausführung:
-  $\Hom(X,Y)\times\Hom(Y,Z)\rightarrow\Hom(X,Z)$. Diese ist assoziativ und es
-  existiert für jedes Objekt eine Identität.
-\end{bemerk}
-
-\begin{bsp}
-  \begin{enumerate}
-   \item $\Ens$ ist Kategorie aller Mengen und
-    $\Hom(X,Y)$ sind alle Abbildungen $X\rightarrow Y$.
-   \item Sei $K$ ein Körper. Man bezeichnet mit $\VEC_{K}$ die Vektorräume
-    über $K$. Dann sind $\Hom(V,W)$ die linearen Abbildungen $V\rightarrow W$.
-   \item Sei $\Topo$ die Kategorie der metrischen Räume. Dann sind $\Hom(X,Y)$
-    alle stetigen Abbildungen.
-   \item $\Gr$ die Kategorie der Gruppen und $\Hom(G,H)$ alle Homomorphismen
-    $G\rightarrow H$.
-   \item Die Kategorie der \textsc{Banach}räume und ihre stetigen Abbildungen.
-  \end{enumerate}
-\end{bsp}
-
-\begin{defini}
-  \highl{Funktor}en sind Abbildungen zwischen Kategorien: $F\colon
-  C\rightarrow D$. Es gehen Objekte auf Objekte: $X\mapsto F(X)$ und Funktoren
-  auf Funktoren: $X\xrightarrow{f} Y\mapsto F(X)\xrightarrow{F(f)} F(Y)$ oder
-  $F(Y)\xrightarrow{F(f)} F(X)$.
-\end{defini}
-
-\begin{bsp}
-  \begin{enumerate}
-   \item $\Top\rightarrow\Ens$ \highl{Vergissfunktor} Kovarianz
-   \item $\VEC_{K}\rightarrow\VEC_{K}\colon V\rightarrow V^{*}$ (Dualraum),
-    $V\xrightarrow{f} W\mapsto W^{*}\xrightarrow{f^{*}}V^{*}$
-   \item Hauptsatz der \textsc{Galois}"~Theorie (\autoref{satz:theogal}): Zwei
-    kleine Kategorien: Zwischenkörper und Inklusionen, Untergruppen und
-    Inklusionen. Dann haben wir zwei kontravariante Funktoren, welche invers
-    zueinander sind.
-  \end{enumerate}
-\end{bsp}
-Ende des Einschubes.
 
 \begin{bemerk}
   \begin{enumerate}
@@ -492,8 +450,8 @@ Ende des Einschubes.
 \begin{bsp}
   \begin{enumerate}
    \item $G\rightarrow\{1\}, \{1\}\rightarrow G$
-   \item $\det\colon\GL(n,K)\rightarrow K^{*}$
-   \item $\C\rightarrow\C^{*}, z\mapsto e^{2\pi iz}$
+   \item $\det\colon\GL(n,K)\rightarrow K^{\ast}$
+   \item $\C\rightarrow\C^{\ast}, z\mapsto e^{2\pi iz}$
    \item $\sgn\colon S_{n}\rightarrow\{1,-1\}$
   \end{enumerate}
 \end{bsp}
@@ -542,7 +500,7 @@ Ende des Einschubes.
   \begin{enumerate}
    \item Sei $G$ eine Gruppe, $x\in G$. Dann ist $\langle
     x\rangle=\{x^{m}\colon m\in\Z\}$. Die \highl{Ordnung} von $x$ ist
-    $\abs{x}= \min\{n\in\N^{*}\colon x^{n}=1\}$.
+    $\abs{x}= \min\{n\in\N^{\ast}\colon x^{n}=1\}$.
    \item $\left\langle
     \begin{pmatrix}
       1 & 1\\
@@ -600,7 +558,7 @@ Ende des Einschubes.
       &=
 	 \begin{pmatrix}
 	   -y & 1-yz\\
-	   xy-1 & *
+	   xy-1 & -x+xyz-z
 	 \end{pmatrix}
     \end{align*}
     $\Rightarrow$ Diagonalmatrizen sind dabei. Die Rechnung steht in
@@ -614,7 +572,7 @@ Ende des Einschubes.
     Sei $f\colon G\rightarrow H$ Homomorphismus, $G'\subseteq G$ Untergruppe. Dann
     ist $f(G')$ Untergruppe in $H$. Denn $f(G')$ abgeschlossen bezüglich
     Multiplikation: $f(x)f(y)=f(xy), f(1)=1, y\in f(G')\Rightarrow y=f(x),
-    y^{-1}=f(x)^{-1}=f(x^{-1})$.
+    y^{-1}=f(x)^{-1}=f(x^{-1})$ für $x,y\in G'$.
   \end{proof}
 \end{fakt}
 
@@ -633,10 +591,10 @@ Ende des Einschubes.
 \begin{bsp}
   \begin{enumerate}
    \item $\ker(\det)=\SL(n,K)$ heißt \highl{spezielle lineare Gruppe}.
-   \item $\C\rightarrow\C^{*}, z\mapsto e^{2\pi iz}$. Damit ist der Kern der
+   \item $\C\rightarrow\C^{\ast}, z\mapsto e^{2\pi iz}$. Damit ist der Kern der
     Abbildung $\Z$.
    \item $\sgn\colon S_{n}\rightarrow\{1,-1\}, \ker\sgn=A_{n}$
-   \item $\phi_{n}\colon\C^{*}\rightarrow\C^{*}, z\mapsto z^{n},
+   \item $\phi_{n}\colon\C^{\ast}\rightarrow\C^{\ast}, z\mapsto z^{n},
     n\in\N\Rightarrow \ker(\phi_{n})=\{e^{2\pi i\nicefrac{r}{n}},
     0\leq r\leq n\}$. Der Kern heißt auch \highl[Einheitswurzeln!Gruppe
     der]{Gruppe der $n$"~ten Einheitswurzeln}.
@@ -659,7 +617,8 @@ Wir müssen noch die Unabhängigkeit von Repräsentanten zeigen:
   b+m\Z &= b_{1}+m\Z\\
   \Rightarrow(a_{1}+b_{1})+m\Z &= (a+b)+m\Z
 \end{align*}
-Das neutrale Element dieser Addition ist $m\Z$ und $-(a+m\Z)=(-a)+m\Z$.
+Das neutrale Element dieser Addition ist $m\Z$ und $-(a+m\Z)=(-a)+m\Z$ ist das
+Inverse.
 
 \begin{bsp}
   Es gilt $10\equiv1\pmod{9}\Rightarrow10^{n}\equiv1\pmod{9}$. Damit gilt für
@@ -730,7 +689,7 @@ oder zu $\Z/_{m\Z}$ isomorph sind. Man kann zyklische Gruppen auch als
 Drehgruppen regulärer Vielecke veranschaulichen.
 
 \begin{defini}
-  Eine Gruppe heißt \highl{zyklisch}, wenn ein $G=\langle
+  Eine Gruppe heißt \highl{zyklisch}, wenn  $G=\langle
   x\rangle$ für ein $x\in G$ oder anders: $G$ lässt sich von einem Element
   erzeugen.
 \end{defini}
@@ -777,7 +736,7 @@ Drehgruppen regulärer Vielecke veranschaulichen.
 
 \begin{bemerk}
   Die Menge $\Z$ wird erzeugt von $1$ resp. $- 1$ und $\Z/_{12\Z}$ wird erzeugt
-  von $12$ respektive $1, 5, 7, 11, \ldots$
+  von $1, 5, 7, 11$ und $12$.
 \end{bemerk}
 
 \begin{fakt}
@@ -804,9 +763,11 @@ Drehgruppen regulärer Vielecke veranschaulichen.
 \begin{bemerk}
   Die Anzahl der primen Restklassen modulo $m$ wird mit $\varphi (m)$
   bezeichnet, den so genannten \textsc{Euler}-Funktionen.
-  
-  \[\varphi (m) = m \prod_{p\mid m} \left(1 - \frac{1}{p}\right) \qquad p \in \PP\]
-
+  \begin{gather}
+    \label{eq:bem13}
+       \varphi (m) = m \prod_{p\mid m} \left(1 - \frac{1}{p}\right) \qquad p
+       \in \PP
+  \end{gather}
   Zum Beispiel ist $\varphi (12) = 12 - (1 - \frac{1}{2}) (1 - \frac{1}{3}) =
   \frac{12 \cdot 2}{2 \cdot 3} = 4$.
   
@@ -1014,16 +975,16 @@ auf Reihenfolge eindeutig.
 \begin{fakt}
   Für $n \geq 3$ wird $A_n$ erzeugt durch $(1, 2, 3), (1, 2, 4), \ldots, (1,
   2, n)$.
-\end{fakt}
-
-\begin{proof}
+  \begin{proof}
   Jedes $\sigma \in A_n$ ist Produkt von Transpositionen $(1, a), 2
   \leq a \leq n$. Die Anzahl der Faktoren ist gerade. Also $(1, a) (1, b) =
   (1, b, a)$ und $(1, b, a) = (1, 2, a) (1, 2, b) (1, 2, b)$.
 \end{proof}
+\end{fakt}
+
 
 \section{Normalteiler}
-
+\label{sec:normalteiler}
 Beobachtung: Sei $f \colon G \rightarrow H$ Homomorphismus. Dann hat $N = \ker
 (f)$ spezifische Eigenschaft. Für  $x \in N, s \in G \Rightarrow s x s^{- 1} \in N$
 sowie $f (s x s^{- 1}) = f (s) f (x) f (s)^{- 1} = 1$. Kompakt: $s N s^{- 1} =
@@ -1110,30 +1071,30 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
   Sei $f\colon G\rightarrow G'$ ein Homomorphismus von Gruppen, $H=\ker(f)$.
   Dann existiert genau ein Homomorphismus:
   \begin{gather*}
-    f_{*}\colon G/_{H}\rightarrow G'
+    f_{\ast}\colon G/_{H}\rightarrow G'
   \end{gather*}
   welcher das folgende Diagramm kommutativ macht:
     \begin{gather*}
     \begin{xy}
       \xymatrix{
-      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\\ %\ar@{.>}[ld]^{f_{*}}\\
-      & G/_{H}\ar@{.>}[ur]_{f_{*}} &
+      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\\ %\ar@{.>}[ld]^{f_{\ast}}\\
+      & G/_{H}\ar@{.>}[ur]_{f_{\ast}} &
 	}
     \end{xy}
   \end{gather*}
-  Die Abbildung $f_{*}$ verursacht einen Isomorphismus zwischen $G/_{H}$ und
+  Die Abbildung $f_{\ast}$ verursacht einen Isomorphismus zwischen $G/_{H}$ und
   $f(G)$. \help{Sollte das nicht ein $G'$ sein?}
   \begin{proof}
     \begin{enumerate}
-     \item (Eindeutigkeit von $f_{*}$): Seien $f_{*}, f_{*}'$ zwei solche
-      Homomorphismen. Dann gilt $f_{*}(xH)=f(x)=f_{*}'(xH)\Rightarrow f_{*}'=
-      f_{*}$.
-     \item (Existenz von $f_{*}$): $f_{*}(xH)=f(x)$ nach Definition.
+     \item (Eindeutigkeit von $f_{\ast}$): Seien $f_{\ast}, f_{\ast}'$ zwei solche
+      Homomorphismen. Dann gilt $f_{\ast}(xH)=f(x)=f_{\ast}'(xH)\Rightarrow f_{\ast}'=
+      f_{\ast}$.
+     \item (Existenz von $f_{\ast}$): $f_{\ast}(xH)=f(x)$ nach Definition.
       Korrektheit: $xH=x'H\Rightarrow x'=xh, h\in H,
       f(x')=f(xh)=f(x)f(h)=f(x)$.\\
-      Homomorphie: $f_{*}(xyH)=f(xy)=f(x)f(y)= f_{*}(xH)f_{*}(yH)$.
-     \item (Injektivität): $f_{*}(xH)=1\Rightarrow f(x)=1\Rightarrow x\in H$.
-     \item $f_{*}(G/_{H})=f(G)$ ist klar.
+      Homomorphie: $f_{\ast}(xyH)=f(xy)=f(x)f(y)= f_{\ast}(xH)f_{\ast}(yH)$.
+     \item (Injektivität): $f_{\ast}(xH)=1\Rightarrow f(x)=1\Rightarrow x\in H$.
+     \item $f_{\ast}(G/_{H})=f(G)$ ist klar.
     \end{enumerate}
   \end{proof}
 \end{satz}
@@ -1142,10 +1103,10 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
   \begin{enumerate}
    \item $G=\R$ mit der Addition, $H=\Z$ ist ein Normalteiler. Was ist
     $G/_{H}= \R/_{\Z}$? Antwort: Kreislinie! Sei $\phi\colon\R\rightarrow
-    \C_{1}^{*}=\{z\in\C\colon\abs{z}=1\}, \phi(t)=e^{2\pi it}$ ist ein
+    \C_{1}^{\ast}=\{z\in\C\colon\abs{z}=1\}, \phi(t)=e^{2\pi it}$ ist ein
     Homomorphismus: $e^{z_{1}+z_{2}}= e^{z_{1}}e^{z_{2}}$ und $\ker\phi=\Z,
-    \Ima \phi=\C_{1}^{*}$. Nach dem Homomorphiesatz induziert $\phi$ einen
-    Isomorphismus $\R/_{\Z}\rightarrow\C_{1}^{*}$.
+    \Ima \phi=\C_{1}^{\ast}$. Nach dem Homomorphiesatz induziert $\phi$ einen
+    Isomorphismus $\R/_{\Z}\rightarrow\C_{1}^{\ast}$.
    \item $G=\C$ mit Addition, $H=\Z+i\Z= \{ a+bi\colon a,b\in\Z\}$. Man
     bezeichnet $H$ auch als die \highl[Zahlen!ganze \textsc{Gauss}sche]{ganzen
     \textsc{Gauss}schen Zahlen}. Damit ist $G/_{H}$ ein Torus.
@@ -1186,11 +1147,11 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
 \end{satz}
 
 \begin{bsp}
-  Sei $G=\C$ mit der Addition, $\phi\colon\C\rightarrow\C^{*}, e\mapsto
+  Sei $G=\C$ mit der Addition, $\phi\colon\C\rightarrow\C^{\ast}, e\mapsto
   e^{2\pi iz}$. Das ist ein surjektiver Homomorphismus mit dem Kern $\Z$. Sei
   $\Gamma=\Z+\Z i=\{a+bi\colon a,b\in\Z\}, \phi(\Gamma)= \{e^{-2\pi b}\colon
   b\in\Z\}$. Es folgt nach dem ersten Isomorphiesatz:
-  $\C^{*}/_{\phi(\Gamma)}\cong \C/_{\Z}/_{\Gamma/_{\Z}}\cong \C/_{\Gamma}$.
+  $\C^{\ast}/_{\phi(\Gamma)}\cong \C/_{\Z}/_{\Gamma/_{\Z}}\cong \C/_{\Gamma}$.
 \end{bsp}
 
 \section{Das direkte Produkt von Gruppen}
@@ -1361,7 +1322,7 @@ Diese Anzahl für den Exponenten $n$ bezeichnet man mit $p(n)$
 \highl{Partition}en von $n$, d.\,h. $p(n)$ ist die Anzahl von Darstellungen
 von $n$ als Summe positiver natürlicher Zahlen ohne Beachtung der Reihenfolge.
 Denn $A$ der Ordnung $l^{n}$ hat den Typ $(l^{r_{1}},\dotsc, l^{r_{k}})$ mit
-$n=r_{1}+\dotsb+ r_{k}$. Es ist $p\colon\N^{*}\rightarrow\N^{*}$. Diese
+$n=r_{1}+\dotsb+ r_{k}$. Es ist $p\colon\N^{\ast}\rightarrow\N^{\ast}$. Diese
 Abbildung ist in der Zahlentheorie von Bedeutung und hat schon Euler
 beschäftigt.
 
@@ -1642,7 +1603,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
     \sigma(1,a)\sigma^{-1}= (\sigma(1), \sigma(a))=(1,a)$. Also entweder
     $\sigma(1)=1, \sigma(a)=a$ oder $\sigma(1)=a, \sigma(a)=1$ für alle
     $a\geq2$. Damit folgt, dass $\sigma=\iota$.
-   \item $C(\GL(n,\R))=\R^{*}\cdot I$. Denn die Matrix $E_{ij}$ hat nur an der
+   \item $C(\GL(n,\R))=\R^{\ast}\cdot I$. Denn die Matrix $E_{ij}$ hat nur an der
     $ij$"~ten Stelle eine 1, sonst 0. In $AE_{ij}$ steht in der $j$"~ten
     Spalte die $i$"~te Spalte von $A$ und in $E_{ij}A$ steht in der $i$"~ten
     Zeile die $j$"~te Zeile von $A$. Weiter ist $E_{ij}E_{kl}=\delta_{jk}
@@ -1715,13 +1676,13 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
 \end{bsp}
 
 \begin{bsp}
-  Sei $G=\GL(2,\C), A\in G, \mu, \lambda\in\C^{*}$ ihre Eigenwerte. Ist
+  Sei $G=\GL(2,\C), A\in G, \mu, \lambda\in\C^{\ast}$ ihre Eigenwerte. Ist
   $\lambda\neq\mu$, so existiert eine Eigenbasis. Also ist $A$ konjugiert zu $
   \begin{pmatrix}
     \lambda & 0\\
     0 & \mu
   \end{pmatrix}$. Also für alle Paare $(\lambda,
-  \mu)\in\C^{*}\times\C^{*}\setminus \diag(\C^{*})$ Konjugationsklasse
+  \mu)\in\C^{\ast}\times\C^{\ast}\setminus \diag(\C^{\ast})$ Konjugationsklasse
   $c(\lambda,\mu)$. Außer der Relation $c(\lambda,\mu)=c(\mu,\lambda)$ sind
   die Klassen verschieden. Sei nun $\lambda=\mu$.
   \begin{enumerate}[1. F{a}ll]
@@ -1730,7 +1691,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
       \lambda & 0\\
       0 & \lambda 
     \end{pmatrix}$. Also sogar gleich. Damit gibt es einelementige
-    Konjugationsklassen $c(\lambda), \lambda\in\C^{*}$.
+    Konjugationsklassen $c(\lambda), \lambda\in\C^{\ast}$.
    \item Es gibt keine Eigenbasis. Aber es existiert ein Eigenvektor zu
     $\lambda$. Damit folgt: $A$ ist konjugiert zu $
     \begin{pmatrix}
@@ -1942,7 +1903,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
       1 &  & * \\
       & \ddots & \\
       0 &  & 1
-    \end{pmatrix}\colon *\in \F_p \right\}$.
+    \end{pmatrix}\colon \ast\in \F_p \right\}$.
   \end{enumerate}
 \end{bsp}
 
@@ -2122,7 +2083,8 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
       Sei o.\,B.\,d.\,A.  $(1, 2, 3) \in N, \Rightarrow (1, 3, 2) \in N$.
       Weiter sei $\sigma = (1, 2) (3, k), k \geq 4,\sigma \in A_n, \sigma (1,
       3, 2) \sigma^{- 1} = (1, 2, k) \in N$.      
-      Diese 3-Zyklen erzeugen $A_n$, siehe (weit) oben. \todo{Link einfügen}
+      Diese 3-Zyklen erzeugen $A_n$, siehe letzter Fakt vor
+      \autoref{sec:normalteiler} (\nameref{sec:normalteiler})
     \end{proof}
   \end{fakt}
   
@@ -2309,7 +2271,7 @@ $\fa+\fb\coloneqq\{a + b\colon a \in \fa, b \in \fb\}$
   Seien $\fa, \fb$ Ideale in $A$. Dann ist
   \begin{gather*}
     \fa\fb\coloneqq\left\{\sum_{i=1}^{r} a_{i}b_{i}\colon a_{i}\in\fa, b_{i}\in\fb,
-       r\in\N^{*}\right\}
+       r\in\N^{\ast}\right\}
   \end{gather*}
   wieder ein Ideal in $A$.
 \end{fakt}
@@ -2369,22 +2331,22 @@ bezüglich $+$. Wir prägen $A/_{\fa}$ eine Multiplikation auf via
 \begin{satz}[Homomorphiesatz]
   \label{satz:1-homoring}
   Sei $f\colon A\rightarrow B$ ein Ringhomomorphismus und $\fa=\ker(f)$. Dann
-  existiert genau ein Homomorphismus $f_{*}\colon A/_{\fa}\rightarrow B$,
+  existiert genau ein Homomorphismus $f_{\ast}\colon A/_{\fa}\rightarrow B$,
   welcher das folgende Diagramm kommutativ ergänzt:
       \begin{gather*}
     \begin{xy}
       \xymatrix{
-      A \ar[rr]^{f} \ar[rd]_{\text{kan}} & & B\ar@{<.}[dl]^{f_{*}}\\
+      A \ar[rr]^{f} \ar[rd]_{\text{kan}} & & B\ar@{<.}[dl]^{f_{\ast}}\\
       & A/_{\fa} &
 	}
     \end{xy}
   \end{gather*}
   vulgarisiert: Ring durch Kern gleich Bild.
   \begin{proof}
-    Für die unterliegenden additiven Gruppen ist der Satz bereits bewiesen.
-    \todo{Link einfügen} Nun ist noch zu zeigen: $f_{*}$ ist
-    Ringhomomorphismus: $f_{*}(x+\fa)=f(x)$. Somit ist $f_{*}((x+\fa)(y+\fa))=
-    f_{*}(xy+\fa)=f(xy)$ und $f_{*}(x+\fa)f_{*}(y+\fa)=f(x)f(y)= f(xy)$.
+    Für die unterliegenden additiven Gruppen ist der Satz bereits bewiesen
+    (\autoref{satz:2}). Nun ist noch zu zeigen: $f_{\ast}$ ist
+    Ringhomomorphismus: $f_{\ast}(x+\fa)=f(x)$. Somit ist $f_{\ast}((x+\fa)(y+\fa))=
+    f_{\ast}(xy+\fa)=f(xy)$ und $f_{\ast}(x+\fa)f_{\ast}(y+\fa)=f(x)f(y)= f(xy)$.
   \end{proof}
 \end{satz}
 
@@ -2497,7 +2459,7 @@ $xy=0$.
   \begin{proof}
     Sei $A\xrightarrow{f} B \xrightarrow{\text{kan}} B/_{\fm'}$. Der Kern dieses
     Homomorphismus ist $\fm=f^{-1}(\fm')$. Also erhält man aus dem
-    Homomorphiesatz einen Isomorphismus: $f_{*}\colon A/_{\fm}\rightarrow
+    Homomorphiesatz einen Isomorphismus: $f_{\ast}\colon A/_{\fm}\rightarrow
     B/_{\fm'}$. Damit ist auch $A/_{\fm}$ ein Körper.
   \end{proof}
 \end{fakt}
@@ -2544,7 +2506,7 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
 \begin{enumerate}
  \item Die Mutter aller Ringe: $\Z$ mit den Einheiten $\{1,-1\}$, den
   Primidealen $(0), (p)$ mit $p\in\PP$ und den maximalen Idealen $(p)$. Man
-  kann zeigen: $\F_{p}^{*}$ ist zyklisch.
+  kann zeigen: $\F_{p}^{\ast}$ ist zyklisch.
 
   \emph{Hauptsatz der elementaren Arithmetik}: Jede ganze Zahl ungleich 0 ist
   eindeutig darstellbar als Produkt aus einer Einheit und endlich vielen
@@ -2553,7 +2515,7 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
   a,b\in\Z\}$. Der Ring ist integer, da er in $\C$ liegt. Die \highl{Norm}
   $N\colon\Z[i]\rightarrow\Z, a+bi\mapsto a^{2}+b^{2}=(a+bi)(\overline{a+bi})$
   ist Einheit in $\Z[i]$, so auch $N(x)$ in $\Z$. Mithin ist
-  $N(x)=a^{2}+b^{2}=\pm1\Rightarrow\Z[i]^{*}=\{1,-1,i,-i\}$.
+  $N(x)=a^{2}+b^{2}=\pm1\Rightarrow\Z[i]^{\ast}=\{1,-1,i,-i\}$.
 
   Wir zeigen, $\Z[i]$ ist ein Hauptidealring. Hierfür beweisen wir zunächst
   die folgende Aussage:\\
@@ -2647,10 +2609,10 @@ Sei $A$ integer.
   Reihenfolge und Einheiten eindeutig ist:
   \begin{enumerate}[(i)]
    \item $\forall a\in A, a\neq0\,\exists p_{1},\dotsc, p_{n}\in A$ prim,
-    $u\in A^{*}\colon a=up_{1}\cdot\dotso \cdot p_{n}$
+    $u\in A^{\ast}\colon a=up_{1}\cdot\dotso \cdot p_{n}$
    \item $a=up_{1}\cdot\dotso \cdot p_{m}=vq_{1}\cdot\dotso \cdot q_{n}$ mit
-    $u,v\in A^{*}, p_{i}, q_{j}\in A$ prim $\Rightarrow m=n$ und es existiert
-    ein $\sigma\in S_{n}, u_{i}\in A^{*}$ mit $q_{i}=up_{\sigma(i)}$
+    $u,v\in A^{\ast}, p_{i}, q_{j}\in A$ prim $\Rightarrow m=n$ und es existiert
+    ein $\sigma\in S_{n}, u_{i}\in A^{\ast}$ mit $q_{i}=up_{\sigma(i)}$
   \end{enumerate}
 \end{defini}
 
@@ -2683,14 +2645,14 @@ Sei $A$ integer.
 	$1,p$ bis auf Einheiten und $p$ scheidet als Teiler von $a$ aus. Wir
 	betrachten $(a)+(p)=\{ax+py\colon x,y\in A\}$ und zeigen, dass es $A$
 	ist. Man kann schreiben: $(a)+(p)=(z)$ und es folgt, $z\mid a, z\mid
-	p\Rightarrow z\in A^{*}\Rightarrow(a)+(p)=A$. Also kann man schreiben:
+	p\Rightarrow z\in A^{\ast}\Rightarrow(a)+(p)=A$. Also kann man schreiben:
 	$1=ax+py$ mit $x,y\in A$. Die Multiplikation mit $b$ liefert:
 	$b=abx+pby$. Damit ist $b$ durch $p$ teilbar.
       \end{proof}
       Nun folgt die Eindeutigkeit: $a=up_{1}\cdot\dotso \cdot p_{m}=
       vq_{1}\cdot\dotso \cdot q_{n}$ wie oben. Es folgt, $p_{1}\mid
       q_{1}\cdot\dotso \cdot q_{n}$ und  o.\,B.\,d.\,A. $p_{1}\mid
-      q_{1}\Rightarrow p_{1}=uq_{1}$. Wegen $u_{1}\in A^{*}$ folgt
+      q_{1}\Rightarrow p_{1}=uq_{1}$. Wegen $u_{1}\in A^{\ast}$ folgt
       $up_{2}\cdot\dotso \cdot p_{m}=v'q_{2}\cdot\dotso \cdot q_{n}$.
     \end{enumerate}
   \end{proof}
@@ -2699,7 +2661,7 @@ Sei $A$ integer.
 \begin{bemerk}
   Die Existenz oben war schwer zu zeigen. Es gibt ordentliche Ringe ohne
   Primelementzerlegung. Sei $A$ der Ring der ganzen Funktionen auf $\C$. Die
-  Einheiten $A^{*}$ sind die ganzen Funktionen ohne Nullstellen. Man kann sich
+  Einheiten $A^{\ast}$ sind die ganzen Funktionen ohne Nullstellen. Man kann sich
   überzeugen, dass die Primelemente wie folgt aussehen: $z-z_{0}$ für alle
   $z_{0}$. Es ist klar, dass $\sin(z)$ kein Produkt einer Einheit und endlich
   vieler Primelemente. Denn der Sinus hat unendlich viele Nullstellen.
@@ -3020,7 +2982,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
    \item Sei $A=\Z/_{8\Z}, f\in A[X], f=X^{2}-1$. Dann hat $f$ vier
     Nullstellen in $A$: 1, 3, 5, 7
    \item Hohe Analogie zwischen $\Z$ und $K[X]$. Die Einheiten in $\Z$ sind
-    $\pm1$ und in $K[X]^{*}=K^{*}$. Die Primelemente in $\Z$ sind $p\in\PP$
+    $\pm1$ und in $K[X]^{\ast}=K^{\ast}$. Die Primelemente in $\Z$ sind $p\in\PP$
     und in $K[X]$ die irreduziblen Polynome. Beide Ringe sind Hauptidealringe,
     faktoriell und besitzen den \textsc{Euklid}schen Algorithmus.
   \end{enumerate}
@@ -3033,9 +2995,9 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     $\fg=(p)$ Primideal. Wir müssen zeigen, dass $K[X]/_{(p)}$ ein
     Körper ist. Sei dazu $f\in K[X]/_{(p)}$. Wir zeigen, $f+\fg$ ist
     invertierbar. Sei $(f)+(p)=(h)$ und es folgt, $(f)\subseteq(h)\Rightarrow
-    h\mid f$. Weiter ist $p\subseteq h\Rightarrow h\mid p$. Also $h\in K^{*}$
-    oder $h=up$ mit $u\in K^{*}$. Aus $h=up$ folgt, $p\mid f$\lightning{} Alsi
-    ist $h\in K^{*}$ und $(f)+(p)=K[X]\ni 1\Rightarrow1=gf+qp$ mit $q,g\in
+    h\mid f$. Weiter ist $p\subseteq h\Rightarrow h\mid p$. Also $h\in K^{\ast}$
+    oder $h=up$ mit $u\in K^{\ast}$. Aus $h=up$ folgt, $p\mid f$\lightning{} Alsi
+    ist $h\in K^{\ast}$ und $(f)+(p)=K[X]\ni 1\Rightarrow1=gf+qp$ mit $q,g\in
     K[X]$. In $K[X]/_{\fg}$ gilt also $1=\overline{g}\overline{f}$.
   \end{proof}
 \end{fakt}
@@ -3070,7 +3032,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
 \begin{fakt}
   Für jedes Polynom $f\in\Q[X]\setminus\{0\}$ existiert eine rationale Zahl
-  $\text{cont}(f)\in\Q^{*}$ so, dass $f=\text{cont}(f)\cdot f_{1}$ mit
+  $\text{cont}(f)\in\Q^{\ast}$ so, dass $f=\text{cont}(f)\cdot f_{1}$ mit
   $f_{1}\in\Z[X]$. Die Koeffizienten haben den größten gemeinsamen Teiler 1.
   Man bezeichnet $\text{cont}(f)$ als \highl{Inhalt} von $f$.
   \begin{proof}
@@ -3095,7 +3057,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 \end{fakt}
 
 \begin{bemerk}
-  Ist $\lambda\in\Q^{*}$ so gilt: $\text{cont}(\lambda
+  Ist $\lambda\in\Q^{\ast}$ so gilt: $\text{cont}(\lambda
   f)=\lambda\text{cont}(f)$. Denn $f=\text{cont}(f)f_{1}\Rightarrow\lambda
   f=\lambda \text{cont}(f) f_{1}$.
 \end{bemerk}
@@ -3130,7 +3092,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   \begin{proof}
     Wir schreiben $g=\text{cont}(g)g_{1}, h=\text{cont}(h)h_{1}$. Dann folgt,
     $f=
-    \text{cont}(g)\text{cont}(h)g_{1}h_{1}\Rightarrow\underbrace{\text{cont}(f)}_{\in\N^{*}}=
+    \text{cont}(g)\text{cont}(h)g_{1}h_{1}\Rightarrow\underbrace{\text{cont}(f)}_{\in\N^{\ast}}=
     \text{cont}(g)\text{cont}(h)$.
   \end{proof}
 \end{folg}
@@ -3139,7 +3101,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   Der Ring $\Z[X]$ ist faktoriell.
   \begin{proof}
     Sei $f\in\Z[X]\setminus\{0\}$. Dann $f=cp_{1}\dotso p_{r} \in\Q[X]$
-    irreduzibel und $c\in\Q^{*}$. Nach der obigen Folgerung kann man die
+    irreduzibel und $c\in\Q^{\ast}$. Nach der obigen Folgerung kann man die
     $p_{j}$ aus $\Z[X]$ wählen sowie $\text{cont}(p_{j})=1$ annehmen. Dann ist
     $c\in\Z\setminus\{0\}$. Die $p_{j}$ sind irreduzibel in $\Z[X]$. Damit
     folgt Existenz einer Zerlegung in Primelemente.
@@ -3147,7 +3109,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     Die Eindeutigkeit folgt: $cp_{1}\dotso p_{m}=dq_{1}\dotso q_{n}$ mit
     $c,d\in\Z\setminus\{0\}, p_{i}, q_{j}\in\Z[X]$ mit Inhalt 1 und
     irreduzibel. In $\Q[X]$ nachschauen zeigt, $m=n, p_{i}=\lambda_{i} q_{i},
-    \lambda_{i}\in\Q^{*}\Rightarrow 1=\lambda_{i}1 \Rightarrow \lambda_{i}=1
+    \lambda_{i}\in\Q^{\ast}\Rightarrow 1=\lambda_{i}1 \Rightarrow \lambda_{i}=1
     \Rightarrow c=d$.
   \end{proof}
 \end{folg}
@@ -3168,6 +3130,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
 %satz 7
 \begin{satz}[\textsc{Eisenstein}s Irreduzibilitätskriterium]
+  \label{satz:7-eisenstein}
   Sei $A$ ein Hauptidealring und integer, $K$ der Quotientenkörper, $f=a_{0}+
   a_{1}X+\dotsb+a_{n}X^{n}\in A[X], a_{n}\neq0, n\geq1$. Weiter sei $p\in A$
   ein Primelement und es gelte:
@@ -3533,6 +3496,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \end{bemerk}
 
 \begin{satz}[Turmsatz für endliche Erweiterungen]
+  \label{satz:X-turmendlich}
   Seien $E/_F, F/_K$ endliche Erweiterungen. Dann ist auch $E/_K$ endlich
   und es gilt:
   \begin{gather*}
@@ -3589,8 +3553,8 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
   \end{enumerate}
   \begin{proof}
     Wir sahen schon: $K[X] \rightarrow E, f \mapsto f (\alpha)$ induziert
-    injektiven Ringhomomorphismus. Nach dem Homomorphiessatz \todo{Link
-    einfügen} gilt $K[X]/_{(p(X))} \rightarrow E$ und da $(p(X))$ ein 
+    injektiven Ringhomomorphismus. Nach dem Homomorphiessatz
+    (\autoref{satz:1-homoring}) gilt $K[X]/_{(p(X))} \rightarrow E$ und da $(p(X))$ ein 
     maximales Ideal ist, ist  $K[X]/_{(p(X))}$ ein Körper. Sein Bild ist
     Teilkörper in $E$, welcher $K$ und $\alpha$ umfasst. Also enthält er
     $K(\alpha)$.
@@ -3865,9 +3829,9 @@ Im folgenden betrachten wir nun die Eindeutigkeit (zweiter Punkt des Satzes).
     K[X]\rightarrow L, f\mapsto f(\alpha_{i})$. Dies ist ein Homomorphismus
     zund ist auf $K$ gleich $\sigma$. Das irreduzible Polynom
     $\Irr(X,\alpha,K)$ geht dabei auf 0. Mithin erhalten wir einen
-    Homomorphismus von $\sigma_{*}\colon K[X]/_{(\Irr(X,\alpha,K))}\rightarrow
+    Homomorphismus von $\sigma_{\ast}\colon K[X]/_{(\Irr(X,\alpha,K))}\rightarrow
     L$. Wir haben einen Isomorphismus $E\rightarrow K[X]/_{\Irr(X,\alpha,K)}$.
-    Dabei geht $\alpha$ auf $X+(\Irr)$, unter $\sigma_{*}$ geht $X+(\Irr)$ auf
+    Dabei geht $\alpha$ auf $X+(\Irr)$, unter $\sigma_{\ast}$ geht $X+(\Irr)$ auf
     $\alpha_{i}$.
 
     Wir zeigen nun: Jeder Homomorphismus $\tau\colon E\rightarrow L$ hat diese
@@ -4125,8 +4089,8 @@ Menge der Einlagerungen.
    \item $\chr(K)=0\Rightarrow\forall\alpha\in K\colon\alpha$ separabel/$K$.
    \item Später: Jedes $\alpha\in\overline{\F}_{p}$ ist separabel/$\F_{p}$.
    \item Sei $K$ der Quotientenkörper von $\F_{p}[t]$. Wähle ein Polynom $f\in
-    K[X]$ mit $f=X^{p}-t$. Das ist irreduzibel nach \textsc{Eisenstein} \todo{Link
-    einfügen}. Sei $\xi\in\overline{K}$ eine Wurzel von $f$. Dann gilt
+    K[X]$ mit $f=X^{p}-t$. Das ist irreduzibel nach \textsc{Eisenstein}
+    (\autoref{satz:7-eisenstein}). Sei $\xi\in\overline{K}$ eine Wurzel von $f$. Dann gilt
     $(X-\xi)^{p}=X^{p}-\xi^{p}=X^{p}-t$, d.\,h. $f$ hat eine $p$"~fache
     Wurzel. Das bedeutet, $\xi$ ist inseparabel/$K$.    
   \end{enumerate}
@@ -4164,7 +4128,9 @@ Menge der Einlagerungen.
 
     Wir zeigen nun, $[K(\alpha)\colon K(\alpha^{p})]=p$. Denn
     $[K(\alpha)\colon K]=\deg p(X), [K(\alpha^{p})\colon K]=\deg q(X)=
-    \frac{\deg p(X)}{p}$. Es folgt nach der Gradformel \todo{Link einfügen}
+    \frac{\deg p(X)}{p}$. Es folgt nach der Gradformel
+    (\autoref{satz:X-turmendlich}) \help{Folgt das nicht eher aus dem
+    Turmsatz? siehe Link}
     die Behauptung. Eine leichte Induktion zeigt weiter, $[K(\alpha)\colon
     K(\alpha^{p})]=p^{n}$ und $[K(\alpha^{p^{n}})\colon
     K]=[K(\alpha^{p^{n}})\colon K]_{S}$.
@@ -4380,7 +4346,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
   der Ordnung $n$. Diese kann man zerlegen: $c_{n}=\dotcup_{d\mid n} D_{d}$
   mit $D_{d}$ sind alle Elemente der Ordnung $d$. Weiter enthält $c_{n}$ genau
   eine Untergruppe der Ordnung $d$. Diese ist zyklisch und enthält $\phi(d)$
-  Elemente der Ordnung $d$ (siehe Kapitel 1\todo{Link einfügen}). Primitive
+  Elemente der Ordnung $d$ (siehe \autoref{eq:bem13}). Primitive
   $d$"~te Einheitswurzel ist eine $d$"~te Einheitswurzel der Ordnung $d$:
   \begin{itemize}
    \item 1 primitive 1. Einheitswurzel
@@ -4776,19 +4742,28 @@ Jeder Automorphismus aus $\Gal(f)$ ist eindeutig bestimmt durch seine Wirkung
 auf $\alpha$ und auf $i$. Wir haben $\sigma\colon\alpha\mapsto i\alpha$ und es
 folgt, $i\rightarrow i$,  d.\,h. das $i$ bleibt fest. Denn
 $[\Q(\alpha,i)\colon\Q(i)]= 4$ und $\Q(\alpha,i)$ entsteht aus $\Q(i)$ durch
-Adjunktion einer beliebigen Wurzeln von $f$. Also ist es eine
+Adjunktion einer beliebigen Wurzel von $f$. Also ist es eine
 \textsc{Galois}"~Erweiterung und $\sigma\colon\alpha \mapsto i\alpha$ erzeugt
 die \textsc{Galois}gruppe $\Gal(\Q(\alpha,i)/_{\Q(i)})\subset
-\Gal(\Q(\alpha,\in)/_{\Q})$. Weiter ist $[K\colon \Q(\alpha)]=2,
-\Gal(K/_{\Q(\alpha)})= \{\iota, \tau\}, \tau\colon i\mapsto-i,
-\tau\colon\alpha\mapsto\alpha$. Dabei ist $K$ der Zerfällungskörper von
+\Gal(\Q(\alpha,i)/_{\Q})$. Weiter ist
+\begin{align*}
+  [K\colon \Q(\alpha)]&=2 &
+  \Gal(K/_{\Q(\alpha)}) &= \{\iota, \tau\}, \tau\colon i\mapsto-i,
+\tau\colon\alpha\mapsto\alpha
+\end{align*}
+Dabei ist $K$ der Zerfällungskörper von
 $X^{2}+1$.
 
-Also $\sigma, \tau\in\Gal(K/_{\Q}). $Es gilt, $\sigma^{4}=\iota= \tau^{2}$ und
-$\tau\sigma=\sigma^{3}\tau\Rightarrow\Gal(K/_{\Q})= \{1, \sigma, \sigma^{2},
-\sigma^{3}, \tau, \sigma\tau, \sigma^{2}\tau, \sigma^{3}\tau\}$ und $\Gal(f)=
-\{\iota, (1,3), (2,4), (1,2,3,4), (1,4,3,2), (1,2)(3,4), (1,3)(2,4),
-  (1,4)(2,3)\}$. Dies ist eine 2-\textsc{Sylow}"~Gruppe in $S_{4}$.
+Also ist $\sigma, \tau\in\Gal(K/_{\Q})$. Es gilt, $\sigma^{4}=\iota= \tau^{2}$ und
+$\tau\sigma=\sigma^{3}\tau\Rightarrow$
+\begin{align*}
+  \Gal(K/_{\Q}) &= \{1, \sigma, \sigma^{2},\sigma^{3}, \tau, \sigma\tau,
+     \sigma^{2}\tau, \sigma^{3}\tau\}\\
+  \Gal(f) &= \{\iota, (1,3), (2,4), (1,2,3,4), (1,4,3,2), (1,2)(3,4),
+     (1,3)(2,4), (1,4)(2,3)\}
+\end{align*}
+Dies ist eine 2-\textsc{Sylow}"~Gruppe in $S_{4}$.
+
 \begin{gather*}
   \begin{xy}
     \xymatrix{
@@ -4807,7 +4782,7 @@ $\tau\sigma=\sigma^{3}\tau\Rightarrow\Gal(K/_{\Q})= \{1, \sigma, \sigma^{2},
 \end{gather*}
 
 Normalteiler sind $\{\iota\}, G$ und die vierelementigen. Untergruppen vom
-Index 2 sind stets Normalteiler: $xH=Hx$ wgen $xH=H\Rightarrow x\in
+Index 2 sind stets Normalteiler: $xH=Hx$ wegen $xH=H\Rightarrow x\in
 H\Rightarrow xH=Hx, xH\neq H\Rightarrow xH=G\setminus H, x\notin H, Hx\neq
 H\Rightarrow Hx=G\setminus H\Rightarrow xH=Hx$. Weiter ist das Zentrum von $G$
 ($\{1,\sigma^{2}\}$) ein Normalteiler. Wir bestimmen alle Zwischenkörper:
@@ -4858,7 +4833,8 @@ invertierbar unter $\sigma\tau$. Wir haben $\beta^{2}= (1+2i-1)\alpha^{2}=
 $X^{4}+8\in\Q[X]\Rightarrow[\Q(\beta)\colon\Q]=4$.
 
 Letzte Anmerkung: $f(2X)= 16X^{4}+8= 8(2X^{4}+1)=
-      8X^{4}((\nicefrac{1}{X})^{4}+ 2)$ und \textsc{Eisenstein} anwenden.
+      8X^{4}((\nicefrac{1}{X})^{4}+ 2)$ und \textsc{Eisenstein}
+(\autoref{satz:7-eisenstein}) anwenden.
 
 %satz 6
 \begin{satz}[Fundamentalsatz der Algebra]
@@ -4893,10 +4869,10 @@ Letzte Anmerkung: $f(2X)= 16X^{4}+8= 8(2X^{4}+1)=
     \textsc{Galois}"~Erweiterung und $\Gal(K/_{\C})$ ist auch 2"~Gruppe.
 
     Die weitere Beweisführung erfolgt indirekt. Hierzu nehmen wir an:
-    $\Gal(K_{\C})\neq1$. Wir wissen, dass $p$"~Gruppen auflösbar sind. Also
+    $\Gal(K/_{\C})\neq1$. Wir wissen, dass $p$"~Gruppen auflösbar sind. Also
     enthält die 2"~Gruppe $\Gal(K/_{\C})$ einen Normalteiler $H_{1}$ so, dass
     die Faktorgruppe $\Gal(K/_{\C})/_{H_{1}}$ abelsch ist. Nach dem
-    Struktursatz für endliche abelsche Gruppen \todo{Link einfügen} existiert
+    Struktursatz für endliche abelsche Gruppen (\todo{Link einfügen} existiert
     in dieser Gruppe $\Gal(K/_{\C})/_{H_{1}}$ eine Untergruppe vom Index 2.
     Deren Urbild in $\Gal(K/_{\C})$ ist ebenfalls vom Index 2. Diese ist somit
     ein Normalteiler. Nach der \textsc{Galois}"~Theorie gehört zu dieser
@@ -5310,7 +5286,50 @@ Milde Verallgemeinerung:
   \end{proof}
 \end{fakt}
 
+
 \appendix
+
+\chapter{Abstract nonsense}
+\begin{bemerk}
+  Eine Kategorie besteht aus Objekten und Morphismen. Sind $X,Y$ zwei Objekte,
+  so ist die Menge ihrer Morphismen definiert: $\Hom(X,Y)$. Für $X,Y,Z$ hat
+  man die Hintereinanderausführung:
+  $\Hom(X,Y)\times\Hom(Y,Z)\rightarrow\Hom(X,Z)$. Diese ist assoziativ und es
+  existiert für jedes Objekt eine Identität.
+\end{bemerk}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item $\Ens$ ist Kategorie aller Mengen und
+    $\Hom(X,Y)$ sind alle Abbildungen $X\rightarrow Y$.
+   \item Sei $K$ ein Körper. Man bezeichnet mit $\VEC_{K}$ die Vektorräume
+    über $K$. Dann sind $\Hom(V,W)$ die linearen Abbildungen $V\rightarrow W$.
+   \item Sei $\Topo$ die Kategorie der metrischen Räume. Dann sind $\Hom(X,Y)$
+    alle stetigen Abbildungen.
+   \item $\Gr$ die Kategorie der Gruppen und $\Hom(G,H)$ alle Homomorphismen
+    $G\rightarrow H$.
+   \item Die Kategorie der \textsc{Banach}räume und ihre stetigen Abbildungen.
+  \end{enumerate}
+\end{bsp}
+
+\begin{defini}
+  \highl{Funktor}en sind Abbildungen zwischen Kategorien: $F\colon
+  C\rightarrow D$. Es gehen Objekte auf Objekte: $X\mapsto F(X)$ und Funktoren
+  auf Funktoren: $X\xrightarrow{f} Y\mapsto F(X)\xrightarrow{F(f)} F(Y)$ oder
+  $F(Y)\xrightarrow{F(f)} F(X)$.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item $\Topo\rightarrow\Ens$ \highl{Vergissfunktor} Kovarianz
+   \item $\VEC_{K}\rightarrow\VEC_{K}\colon V\rightarrow V^{\ast}$ (Dualraum),
+    $V\xrightarrow{f} W\mapsto W^{\ast}\xrightarrow{f^{\ast}}V^{\ast}$
+   \item Hauptsatz der \textsc{Galois}"~Theorie (\autoref{satz:theogal}): Zwei
+    kleine Kategorien: Zwischenkörper und Inklusionen, Untergruppen und
+    Inklusionen. Dann haben wir zwei kontravariante Funktoren, welche invers
+    zueinander sind.
+  \end{enumerate}
+\end{bsp}
 
 % Vorlesung  vom 2007-12-21
 
@@ -5405,7 +5424,7 @@ von den anderen Inhalten zu betrachten.
   Wir berechnen $\zeta(2k)$ für $k\geq1$.
 
   Es gilt, $\sin z= z \prod_{n=1}^{\infty} (1-\frac{z^{2}}{\pi^{2} n^{2}})$.
-  (siehe auch \textsc{Remmert} \todo{Link einfügen}). Wir bilden nun die
+  (siehe auch \textsc{Remmert}, (\cite{remmert}). Wir bilden nun die
   logarithmische Ableitung und erhalten: $\cot z= \nicefrac{1}{z}+
   \sum_{n=1}^{\infty} \frac{2z}{z^{2}-\pi^{2}n^{2}} = i+
   \frac{2i}{e^{2iz}-1}$. Durch Umstellen erhalten wir $\frac{1}{e^{2iz}-1}=
@@ -5677,6 +5696,7 @@ Es sei $k$ stets ein Körper mit $\chr(k)\neq2,3$.
   Zahlen
  \bibitem{chan} \textsc{Chandrasekharan}. Arithmetic functions
  \bibitem{andrews} \textsc{Andrews}. Partitions
+ \bibitem{remmert} \textsc{Remmert}, \textsc{Schuhmacher}. Funktionentheorie 2
 \end{thebibliography}
 
 \clearpage
